# EMBML

./: .gitignore  README.md
CNN/: README.md  cnn.ipynb  setup.bash
CNN/src/: load_utils.h  main.cpp
CNN/src/storage/: model.tflite  model2.tflite
Decision_Tree/: CMakeLists.txt  README.md
Decision_Tree/src/: decision_tree.cpp  decision_tree.h  decision_tree.py  decision_tree0.h  decisiontree.py  random_forest0.h
Decision_Tree/src/storage/: mean.txt  scale.txt  test_set.csv
Features/: CMakeLists.txt  README.md  setup.bash
Features/src/: checkAuExtraction.py  main.cpp  svm.cpp
Random_Forest/: CMakeLists.txt  README.md
Random_Forest/src/: load_utils.h  random_forest.cpp  random_forest.h  random_forest.py  random_forest0.h
Random_Forest/src/storage/: mean.txt  test_set.csv
Random_Forest/src/tmp/: myinlinetree  myinlinetree.h
SVM/: CMakeLists.txt  README.md
SVM/src/: coef.npy  coef.txt  decision_tree.cpp  decision_tree.dot  decision_tree.h  decision_tree.h.backup  decisiontree.py  intercept.npy  mean.npy  mean.txt  scale.npy  svm.cpp  svm.py
SVM/src/storage/: coef.txt  intercept.txt  scale.txt  test_set.csv
TD1/: plot.py  setup.bash
TD1/src/: checkAuExtraction.py  constants.h  fft_utils.cpp  fft_utils.h  main.cpp
wav_parser/: CMakeLists.txt  README.md
wav_parser/src/: main.cpp
